# Music-Player

./: README.md  pyproject.toml
src/music_player/: __init__.py  config.py  main.py  player.py  playlist.py  ui.py  utils.py  version.py
tests/: test_playlist.py  test_utils.py
